session:express session

--- a/template/admin/login.html
+++ b/template/admin/login.html
@@ -2,6 +2,17 @@
 {% extends "layout/base.html" %}
  
 {% block content -%}
+
+{% if not user %}
+    로그인 <br />
+    회원가입 <br />
+{% else %}
+    {{ user.id }}님 반갑습니다 | 
+    로그아웃 <br />
+{% endif %}
+
+<br /><br />
+
     <form action="" method="post">
         아이디 : <input type="text" name="id"> <br /><br />
         패스워드 : <input type="password" name="password"> <br /><br />
